force-app/main/default/objects/Portfolio__c/Portfolio__c.object-meta.xml
<CustomObject>
    <description>Portfolio&apos;s are a summary of all work for a particular type of IT services.  For example, &quot;2009 infrastructure improvements&quot; which would include &quot;upgrade laptops&quot;  or &quot;FY09 Business Applications Upgrade&quot; which might include &quot;New CRM system&quot; or &quot;New ERP reporting solution&quot;.</description>
    <label>Portfolio</label>
    <nameField>
        <label>Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>