force-app/main/default/objects/Portfolio__c/fields/Planned_Budget__c.field-meta.xml
<CustomField>
    <fullName>Planned_Budget__c</fullName>
    <label>Planned Budget</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>