force-app/main/default/objects/Portfolio__c/fields/Portfolio_Goals__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Goals__c</fullName>
    <label>Portfolio Goals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Satisfaction</fullName>
            </value>
            <value>
                <fullName>Grow Business</fullName>
            </value>
            <value>
                <fullName>Run Business</fullName>
            </value>
            <value>
                <fullName>Transformation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>