force-app/main/default/objects/Portfolio__c/fields/Portfolio_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Long_Description__c</fullName>
    <label>Portfolio Long Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>